Fix Index, add post points to rating box
Buncha other fixes

--- a/dillo/templates/dillo/search.pug
+++ b/dillo/templates/dillo/search.pug
@@ -51,6 +51,9 @@ script.
 						'<div class="item-rating up">' +
 							'<i class="pi-angle-up"></i>' +
 						'</div>' +
+						'<div class="item-rating value">' +
+							'12' +
+						'</div>' +
 						'<div class="item-rating down">' +
 							'<i class="pi-angle-down"></i>' +
 						'</div>' +
@@ -63,7 +66,7 @@ script.
 										' src="http://www.google.com/s2/favicons?domain=https://www.youtube.com">' +
 							'</li>' +
 							'<li>' +
-								'<a href="">2 days ago</a>' +
+								'<a href="">{{ created }} ago</a>' +
 							'</li>' +
 							'<li>{{ user.full_name }}</li>' +
 							'<li>81 points</li>' +
