Added Category to listing
And right fonts from Blender.Today

--- a/dillo/templates/dillo/index.pug
+++ b/dillo/templates/dillo/index.pug
@@ -20,6 +20,7 @@
 					ul
 						li
 							img(title="Link" src="http://www.google.com/s2/favicons?domain=https://www.youtube.com")
+						li Tutorials
 						li
 							a(href="") 2 days ago
 						li koro
@@ -42,6 +43,7 @@
 					ul
 						li
 							img(title="Link" src="http://www.google.com/s2/favicons?domain=http://vimeo.com/")
+						li Artwork
 						li
 							a(href="") 8h ago
 						li koro
@@ -64,6 +66,7 @@
 					ul
 						li
 							img(title="Link" src="http://www.google.com/s2/favicons?domain=https://www.blendernetwork.org")
+						li Community
 						li
 							a(href="") 8h ago
 						li koro
@@ -86,6 +89,7 @@
 		.item-details
 			a.item-title(href="") NEW: Blender Motion Graphics Training
 			ul
+		li Tutorials
 				li
 					a(href="") 2 days ago
 				li koro
