--- a/dillo/templates/dillo/search.pug
+++ b/dillo/templates/dillo/search.pug
@@ -65,14 +65,10 @@ script.
 								'<img title="Link"' +
 										' src="http://www.google.com/s2/favicons?domain=https://www.youtube.com">' +
 							'</li>' +
-							'<li>' +
-								'<a href="">{{ created }} ago</a>' +
-							'</li>' +
+							'<li><a href="">Tutorials</a></li>' +
+							'<li><a href="">2 hours ago</a></li>' +
 							'<li>{{ user.full_name }}</li>' +
-							'<li>81 points</li>' +
-							'<li>' +
-								'<a href="">2 comments</a>' +
-							'</li>' +
+							'<li><a href="">2 comments</a></li>' +
 							'<li>youtube.com</li>' +
 						'</ul>' +
 					'</div>' +
