--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -1,7 +1,7 @@
 
 /* Type */
-$font-body: 'Roboto', sans-serif
-$font-headings: 'Raleway'
+$font-body: 'Open Sans', sans-serif
+$font-headings: 'Oxygen', sans-serif
 $font-size: 16px
 $font-size-small: 12px
 $font-size-large: 22px
