Create Post button

--- a/dillo/templates/dillo/layout.pug
+++ b/dillo/templates/dillo/layout.pug
@@ -28,7 +28,8 @@ html(lang='en')
 						placeholder="Search Dillo...")
 
 				#header-bar-pri-user
-					| Log in
+					button.btn.submit Submit Post
+					button.btn.sign-in SIGN IN
 
 			#header-bar-sec
 		#app-main
