--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -34,6 +34,10 @@ a:hover
 	&.submit
 		+button($color-primary, 2px, true)
 
+.emoji
+	height: 16px
+	width: 16px
+
 /* Listing item */
 .item-title
 	text-decoration: none
