--- a/dillo/templates/dillo/layout.pug
+++ b/dillo/templates/dillo/layout.pug
@@ -15,6 +15,7 @@ html(lang='en')
 		script(src="{{ url_for('static_pillar', filename='assets/js/tutti.min.js', v=171120161) }}")
 		script(src="{{ url_for('static_dillo', filename='js/generated/tutti.min.js', v=171120161) }}", async)
 		script(src="{{ url_for('static_dillo', filename='js/vendor/moment-2.18.1.min.js', v=171120161) }}", async)
+		script(src="https://twemoji.maxcdn.com/2/twemoji.min.js?2.2.3", async)
 
 		| {% block style %}{% endblock %}
 
