--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -47,3 +47,9 @@ ul.list-hits
 
 	.item-details
 		padding: 5px 0
+
+#list-item
+	display: flex
+	flex-direction: column
+	height: 100%
+	width: 100%
