--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -22,6 +22,13 @@ a:hover
 			padding: 10px
 			margin-left: auto
 
+			> ul
+				margin: 0
+				padding: 0
+
+				> li
+					display: inline-block
+
 .app-branding
 	color: $color-primary
 	font-size: $font-size-large
@@ -37,6 +44,21 @@ a:hover
 .emoji
 	height: 16px
 	width: 16px
+
+.user-avatar
+	width: 28px
+	height: 28px
+	margin: 0
+	padding: 0
+	border-radius: 50%
+	vertical-align: middle
+
+.welcome
+	width: 100%
+	height: 100%
+	display: flex
+	align-items: center
+	justify-content: center
 
 /* Listing item */
 .item-title
