Use Gulpjs to compile Pug files

--- a/src/templates/dillo/search.pug
+++ b/src/templates/dillo/search.pug
@@ -1,4 +1,4 @@
-| {% extends 'dillo/layout.pug' %}
+| {% extends 'dillo/layout.html' %}
 | {% block bodyattrs %}{{ super() }} data-context='dashboard'{% endblock %}
 | {% block page_title %}Dashboard{% endblock %}
 
