--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -49,7 +49,5 @@ ul.list-hits
 		padding: 5px 0
 
 #list-item
-	display: flex
-	flex-direction: column
 	height: 100%
-	width: 100%
+	overflow-x: hidden
