--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -13,6 +13,7 @@ html(lang='en')
 
 		script(src="{{ url_for('static_pillar', filename='assets/js/vendor/jquery-3.1.0.min.js', v=171120161)}}")
 		script(src="{{ url_for('static_pillar', filename='assets/js/tutti.min.js', v=171120161) }}")
+		script(src="{{ url_for('static_pillar', filename='assets/js/markdown.min.js', v=171120161) }}")
 		script(src="{{ url_for('static_dillo', filename='js/generated/tutti.min.js', v=171120161) }}", async)
 		script(src="{{ url_for('static_dillo', filename='js/vendor/moment-2.18.1.min.js', v=171120161) }}", async)
 		script(src="https://twemoji.maxcdn.com/2/twemoji.min.js?2.2.3", async)
