--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -57,8 +57,11 @@ a:hover
 	width: 100%
 	height: 100%
 	display: flex
+	flex-direction: column
 	align-items: center
-	justify-content: center
+
+	h2
+		padding-top: 25px
 
 /* Listing item */
 .item-title
@@ -191,3 +194,67 @@ $item-thumbnail-size: 90px
 
 #item-comments
 	margin: 10px 15px
+
+/* General style for activities in all places */
+.d-activity
+	font-size: .85em
+
+	$activity-highlight-color: #00cc9f
+	ul
+		cursor: default
+		margin: 0
+		padding: 0
+		color: $color-text-dark-primary
+		list-style: none
+
+		li
+			padding: 2px 5px 5px 25px
+			position: relative
+
+			span.date
+				color: darken($activity-highlight-color, 5%)
+
+			/* Left Dot */
+			&:after
+				content: ''
+				display: block
+				position: absolute
+				top: 0
+				left: 0
+				width: 16px
+				height: 16px
+				border-radius: 50%
+				background-color: $activity-highlight-color
+				border: thin solid $activity-highlight-color
+				transition: all 250ms ease-in-out
+				z-index: 0
+
+			/* Left Line */
+			&:before
+				content: ''
+				display: block
+				position: absolute
+				top: 10px
+				left: 8px
+				width: 1px
+				height: 100%
+				background-color: $activity-highlight-color
+				transition: all 250ms ease-in-out
+
+			&:last-child
+				&:before
+					background-color: transparent
+
+		span.actor
+			padding: 0 5px
+			color: $color-text-dark
+
+		img.actor-avatar
+			width: 16px
+			height: 16px
+			border-radius: 50%
+			margin-right: 5px
+			position: absolute
+			top: 1px
+			left: 1px
+			z-index: 1
