Markdown post description, emoji, use actual category and name

--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -42,11 +42,27 @@ ul.list-hits
 		font-size: $font-size-large
 		color: $color-primary
 
+		.emoji
+			width: $font-size-large
+			height: $font-size-large
+
 	.item-rating-box
 		min-width: 50px
 
 	.item-details
 		padding: 5px 0
+
+	.item-body
+		img
+			max-width: 100%
+
+		blockquote
+			display: block
+			background-color: $color-background
+			border-left: thick solid $color-background-dark
+			padding: 1px 10px
+			margin: 0
+
 
 #list-item
 	height: 100%
