--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -44,6 +44,11 @@ a:hover
 .emoji
 	height: 16px
 	width: 16px
+	vertical-align: middle
+
+h1 .emoji
+	width: 32px
+	height: 32px
 
 .user-avatar
 	width: 28px
@@ -123,6 +128,11 @@ $item-thumbnail-size: 90px
 	+media-xs
 		width: 60px
 		min-width: 60px
+
+	&.rated.positive .up
+		color: $color-vote-up
+	&.rated.negative .down
+		color: $color-vote-down
 
 .item-rating
 	display: flex
