--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -23,7 +23,7 @@ html(lang='en')
 	body
 		#app-header
 			header#header-bar-pri
-				a.app-branding(href="/") Dillo
+				a.app-branding(href="{{ url_for('posts.index') }}") Dillo
 				.wgt-search
 					input(
 						id="q",
