Work in progress on Edit page

--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -10,13 +10,15 @@ $font-size-large: 22px
 $color-background: #eaebec
 $color-background-light: lighten($color-background, 5%)
 $color-background-dark: darken($color-background, 5%)
+$color-background-darker: darken($color-background, 60%)
 
 $color-text: #4d4e53
+$color-text-lighter: #ccc
 $color-text-light: rgba($color-text, .8)
 $color-text-hint: rgba($color-text, .5)
 
-$color-primary: #558ca4
-$color-secondary: crimson
+$color-primary: #4c7e93
+$color-secondary: #e74c3c
 
 $color-vote-up: #ff8b60
 $color-vote-down: #74a4ff
