--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -1,13 +1,14 @@
 
 /* Type */
-$font-body: 'Open Sans', sans-serif
-$font-headings: 'Oxygen', sans-serif
+$font-body: 'Open Sans', Verdana, Arial, Helvetica, sans-serif
+$font-headings: 'Oxygen', 'Lucida Sans', 'Lucida Grande', sans-serif
 $font-size: 16px
 $font-size-small: 12px
-$font-size-large: 22px
+$font-size-large: 18px
+$font-size-extra-large: 22px
 
 /* Colors */
-$color-background: #eaebec
+$color-background: #EaEbEf
 $color-background-light: lighten($color-background, 5%)
 $color-background-dark: darken($color-background, 5%)
 $color-background-darker: darken($color-background, 60%)
