Use Pillar notifications for errors
403 for now

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -148,3 +148,11 @@ h1 .emoji
 			top: 1px
 			left: 1px
 			z-index: 1
+
+
+#notification-pop
+	&.code-403
+		background-color: $color-danger
+
+		.nc-avatar
+			display: none
